test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/reexport_paths_external_lib/ext_5_1_lib/src/lib.sw
library;

pub use ext_5_items::*;
pub use ext_5_items::Items5_Variants::*;
