test/src/e2e_vm_tests/test_programs/should_fail/generics_multiple_type_arguments/src/lib_a.sw
library;

mod inner_lib;

use inner_lib::*;
